1_EmbeddedC/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:08:45 **** Clean-only build of configuration Debug for project 167_BitfieldExercise ****
make -j12 clean 
rm -rf ./Startup/startup_stm32f407vgtx.d ./Startup/startup_stm32f407vgtx.o
rm -rf ./Src/main.cyclo ./Src/main.d ./Src/main.o ./Src/main.su ./Src/syscalls.cyclo ./Src/syscalls.d ./Src/syscalls.o ./Src/syscalls.su ./Src/sysmem.cyclo ./Src/sysmem.d ./Src/sysmem.o ./Src/sysmem.su
rm -rf 001_HelloWorld.elf 001_HelloWorld.list 001_HelloWorld.map default.size.stdout
 
14:36:48 **** Clean-only build of configuration Debug for project 167_BitfieldExercise ****
make -j12 clean 
rm -rf ./Startup/startup_stm32f407vgtx.d ./Startup/startup_stm32f407vgtx.o
rm -rf ./Src/main.cyclo ./Src/main.d ./Src/main.o ./Src/main.su ./Src/syscalls.cyclo ./Src/syscalls.d ./Src/syscalls.o ./Src/syscalls.su ./Src/sysmem.cyclo ./Src/sysmem.d ./Src/sysmem.o ./Src/sysmem.su
rm -rf 001_HelloWorld.elf 001_HelloWorld.list 001_HelloWorld.map default.size.stdout
 
14:36:49 **** Build of configuration Debug for project 167_BitfieldExercise ****
make -j12 all 
arm-none-eabi-gcc -mcpu=cortex-m4 -g3 -DDEBUG -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f407vgtx.d" -MT"Startup/startup_stm32f407vgtx.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Startup/startup_stm32f407vgtx.o" "../Startup/startup_stm32f407vgtx.s"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/sysmem.o"
../Src/main.c: In function 'main':
../Src/main.c:31:73: error: expected ';' before 'printf'
   31 |         printf("sizeof struct RCC_AHB1ENR_t = %d",sizeof(RCC_AHB1ENR_t))
      |                                                                         ^
      |                                                                         ;
   32 |         printf("Size of short = %d\n", sizeof(short));
      |         ~~~~~~                                                           
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j12 all" terminated with exit code 2. Build might be incomplete.
14:37:07 **** Incremental Build of configuration Debug for project 167_BitfieldExercise ****
make -j12 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c: In function 'main':
../Src/main.c:31:73: error: expected ';' before 'printf'
   31 |         printf("sizeof struct RCC_AHB1ENR_t = %d",sizeof(RCC_AHB1ENR_t))
      |                                                                         ^
      |                                                                         ;
   32 |         printf("Size of short = %d\n", sizeof(short));
      |         ~~~~~~                                                           
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
14:37:24 **** Incremental Build of configuration Debug for project 167_BitfieldExercise ****
make -j12 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "167_BitfieldExercise.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\_mygit\STM32_EmbeddedC\1_EmbeddedC\Embedded-C-master\Bogdan\target\167_BitfieldExercise\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="167_BitfieldExercise.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: 167_BitfieldExercise.elf
 
arm-none-eabi-size  167_BitfieldExercise.elf 
arm-none-eabi-objdump -h -S 167_BitfieldExercise.elf  > "167_BitfieldExercise.list"
   text	   data	    bss	    dec	    hex	filename
   5292	     92	   1900	   7284	   1c74	167_BitfieldExercise.elf
Finished building: default.size.stdout
 
Finished building: 167_BitfieldExercise.list
 
14:37:43 **** Incremental Build of configuration Debug for project 167_BitfieldExercise ****
make -j12 all 
arm-none-eabi-size  167_BitfieldExercise.elf 
   text	   data	    bss	    dec	    hex	filename
   5292	     92	   1900	   7284	   1c74	167_BitfieldExercise.elf
Finished building: default.size.stdout
 
14:38:04 **** Incremental Build of configuration Debug for project 167_BitfieldExercise ****
make -j12 all 
arm-none-eabi-size  167_BitfieldExercise.elf 
   text	   data	    bss	    dec	    hex	filename
   5292	     92	   1900	   7284	   1c74	167_BitfieldExercise.elf
Finished building: default.size.stdout
 
14:40:50 **** Clean-only build of configuration Debug for project 167_BitfieldExercise ****
make -j12 clean 
rm -rf ./Startup/startup_stm32f407vgtx.d ./Startup/startup_stm32f407vgtx.o
rm -rf ./Src/main.cyclo ./Src/main.d ./Src/main.o ./Src/main.su ./Src/syscalls.cyclo ./Src/syscalls.d ./Src/syscalls.o ./Src/syscalls.su ./Src/sysmem.cyclo ./Src/sysmem.d ./Src/sysmem.o ./Src/sysmem.su
rm -rf 167_BitfieldExercise.elf 167_BitfieldExercise.list 167_BitfieldExercise.map default.size.stdout
 
14:40:51 **** Incremental Build of configuration Debug for project 167_BitfieldExercise ****
make -j12 all 
arm-none-eabi-gcc -mcpu=cortex-m4 -g3 -DDEBUG -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f407vgtx.d" -MT"Startup/startup_stm32f407vgtx.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Startup/startup_stm32f407vgtx.o" "../Startup/startup_stm32f407vgtx.s"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/sysmem.o"
arm-none-eabi-gcc -o "167_BitfieldExercise.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\_mygit\STM32_EmbeddedC\1_EmbeddedC\Embedded-C-master\Bogdan\target\167_BitfieldExercise\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="167_BitfieldExercise.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: 167_BitfieldExercise.elf
 
arm-none-eabi-size  167_BitfieldExercise.elf 
arm-none-eabi-objdump -h -S 167_BitfieldExercise.elf  > "167_BitfieldExercise.list"
   text	   data	    bss	    dec	    hex	filename
   5292	     92	   1900	   7284	   1c74	167_BitfieldExercise.elf
Finished building: default.size.stdout
 
Finished building: 167_BitfieldExercise.list
 
